--- a/publications.bib
+++ b/publications.bib
@@ -1,3 +1,10 @@
+@Book{2008_kinniment_synchronisation,
+  Title                    = {Synchronization and Arbitration in Digital Systems},
+  Author                   = {D. J. Kinniment},
+  Publisher                = {John Wiley and Sons},
+  Year                     = {2008},
+}
+
 @article{2014_algebra_mokhov,
   title={Algebra of Parameterised Graphs},
   author={Mokhov, Andrey and Khomenko, Victor},
