--- a/publications.bib
+++ b/publications.bib
@@ -1,13 +1,31 @@
+@inproceedings{2015_sokolov_multiphase,
+  title={Design and verification of speed-independent multiphase buck controller},
+  author={Sokolov, D. and Khomenko, V. and Mokhov, A. and Yakovlev, A. and Lloyd, D.},
+  booktitle={Proceedings of the IEEE International Symposium on Asynchronous Circuits and Systems (ASYNC)},
+  year={2015}
+}
+
 @Book{2008_kinniment_synchronisation,
-  Title                    = {Synchronization and Arbitration in Digital Systems},
-  Author                   = {D. J. Kinniment},
-  Publisher                = {John Wiley and Sons},
-  Year                     = {2008},
+  Title     = {Synchronization and Arbitration in Digital Systems},
+  Author    = {D. J. Kinniment},
+  Publisher = {John Wiley and Sons},
+  Year      = {2008},
+}
+
+@article{1996_yakovlev_or,
+  title={On the models for asynchronous circuit behaviour with OR causality},
+  author={Yakovlev, A. and Kishinevsky, M. and Kondratyev, A. and Lavagno, L. and Pietkiewicz-Koutny, M.},
+  journal={Formal Methods in System Design},
+  volume={9},
+  number={3},
+  pages={189--233},
+  year={1996},
+  publisher={Springer}
 }
 
 @article{2014_algebra_mokhov,
   title={Algebra of Parameterised Graphs},
-  author={Mokhov, Andrey and Khomenko, Victor},
+  author={Mokhov, A. and Khomenko, V.},
   journal={ACM Transactions on Embedded Computing Systems},
   volume={13},
   number={4s},
@@ -18,7 +36,7 @@
 
 @article{1989_murata_pn,
   title={Petri nets: Properties, analysis and applications},
-  author={Murata, Tadao},
+  author={Murata, T.},
   journal={Proceedings of the IEEE},
   volume={77},
   number={4},
@@ -29,7 +47,7 @@
 
 @inproceedings{2015_beaumont_concepts,
   title={Compositional design of asynchronous circuits from behavioural concepts},
-  author={Beaumont, Jonathan and Mokhov, Andrey and Sokolov, Danil and Yakovlev, Alex},
+  author={Beaumont, J. and Mokhov, A. and Sokolov, D. and Yakovlev, A.},
   booktitle={ACM/IEEE International Conference on Formal Methods and Models for Codesign (MEMOCODE)},
   pages={118--127},
   year={2015},
