--- a/main.tex
+++ b/main.tex
@@ -26,9 +26,14 @@ signals, and efficient handling of correlated sensor events.
 
 \section{Introduction}
 
-Multiple timing and voltage domains\\
-Clocked vs async\\
-Analog vs digital\\
+The new generation of circuits and systems is breaking conventional walls between
+different timing, voltage and technology domains. Modern `synchronous' and `digital'
+systems are emphatically asynchronous-at-large and analog-at-heart: they contain tens
+to hundreds of timing and voltage domains, some even thousands~[0]. Asynchronous
+circuits are now used both to orchestrate the communication between different clock
+domains~\cite{2017_jiang_noc} and to control the analog-digital interfaces in on-chip power
+regulators~\cite{2017_sokolov_a4a}.
+
 A2A component\\
 Formal methods\\
 EDA support\\
