--- a/publications.bib
+++ b/publications.bib
@@ -1,3 +1,20 @@
+@inproceedings{2017_jiang_noc,
+  title={{An asynchronous NoC router in a 14nm FinFET library: Comparison to an industrial synchronous counterpart}},
+  author={Jiang, W. and Bertozzi, D. and Miorandi, G. and Nowick, S. and Burleson, W. and Sadowski, G.},
+  booktitle={2017 Design, Automation \& Test in Europe Conference \& Exhibition (DATE)},
+  pages={732--733},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{2017_sokolov_a4a,
+  title={Benefits of Asynchronous Control for Analog Electronics: Multiphase Buck Case Study},
+  author={Sokolov, D. and Dubikhin, V. and Khomenko, V. and Lloyd, D. and Mokhov, A. and Yakovlev, A.},
+  booktitle={Design, Automation \& Test in Europe Conference (DATE)},
+  year={2017},
+  organization={IEEE}
+}
+
 @inproceedings{2015_sokolov_multiphase,
   title={Design and verification of speed-independent multiphase buck controller},
   author={Sokolov, D. and Khomenko, V. and Mokhov, A. and Yakovlev, A. and Lloyd, D.},
