Link to 1K-core procesor

--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 \begin{document}
 \title{Asynchronous Arbitration Primitives\\for New Generation of Circuits and Systems}
 
-\author{\IEEEauthorblockN{Andrey Mokhov\IEEEauthorrefmark{1}, Victor Khomenko, Danil Sokolov, Alex Yakovlev}
+\author{\IEEEauthorblockN{Andrey Mokhov\IEEEauthorrefmark{1}, Danil Sokolov, Victor Khomenko, Alex Yakovlev}
 \IEEEauthorblockA{Newcastle University, Newcastle upon Tyne, United Kingdom}
 \IEEEauthorblockA{\IEEEauthorrefmark{1}\emph{Corresponding author:} \url{andrey.mokhov@ncl.ac.uk}}}
 
@@ -29,8 +29,8 @@ signals, and efficient handling of correlated sensor events.
 The new generation of circuits and systems is breaking conventional walls between
 different timing, voltage and technology domains. Modern `synchronous' and `digital'
 systems are emphatically asynchronous-at-large and analog-at-heart: they contain tens
-to hundreds of timing and voltage domains, some even thousands~[0]. Asynchronous
-circuits are now used both to orchestrate the communication between different clock
+to hundreds of timing and voltage domains, some even thousands~\cite{2017_bohnenstiehl_kilocore}.
+Asynchronous circuits are now used both to orchestrate the communication between different clock
 domains~\cite{2017_jiang_noc} and to control the analog-digital interfaces in on-chip power
 regulators~\cite{2017_sokolov_a4a}.
 
