--- a/publications.bib
+++ b/publications.bib
@@ -1,3 +1,11 @@
+@article{2017_bohnenstiehl_kilocore,
+  title={{KiloCore: A 32-nm 1000-Processor Computational Array}},
+  author={Bohnenstiehl, B. and Stillmaker, A. and Pimentel, J. J. and Andreas, T. and Liu, B. and Tran, A. T. and Adeagbo, E. and Baas, B. M},
+  journal={IEEE Journal of Solid-State Circuits},
+  year={2017},
+  publisher={IEEE}
+}
+
 @inproceedings{2017_jiang_noc,
   title={{An asynchronous NoC router in a 14nm FinFET library: Comparison to an industrial synchronous counterpart}},
   author={Jiang, W. and Bertozzi, D. and Miorandi, G. and Nowick, S. and Burleson, W. and Sadowski, G.},
