--- a/doc/publications.bib
+++ b/doc/publications.bib
@@ -23,6 +23,23 @@
   organization={IEEE}
 }
 
+@Misc{Workcraft_website,
+  Title = {\textsc{Workcraft} website},
+  Note  = {\url{www.workcraft.org}}
+}
+
+@Misc{Arbitration_primitives_github,
+  Title = {Open-source library of asynchronous arbitration primitivies},
+  Note  = {{GitHub} repository: \url{https://github.com/workcraft/arbitration-primitives}}
+}
+
+@Book{2002_cortadella_book,
+  Title     = {Logic Synthesis for Asynchronous Controllers and Interfaces},
+  Author    = {Cortadella, J. and Kishinevsky, M. and Kondratyev, A. and Lavagno, L. and Yakovlev, A.},
+  Publisher = {Springer},
+  Year      = {2002},
+}
+
 @inproceedings{2015_sokolov_multiphase,
   title={Design and verification of speed-independent multiphase buck controller},
   author={Sokolov, D. and Khomenko, V. and Mokhov, A. and Yakovlev, A. and Lloyd, D.},
